# OC_P14

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
configs/: dpo.yaml  dpo_smoke.yaml  sft.yaml  sft_smoke.yaml
deploy/: Dockerfile.api  GUIDE_DEPLOIEMENT_CLOUD.md  README.md  docker-compose.yml  requirements-serve.txt
notebooks/: 01_exploration_donnees.ipynb
reports/: AUDIT_2026-07-06.md  AUDIT_2026-07-10.md  CHECKLIST_MISSION.md  RGPD.md  SOURCES.md  eval_results.json  rapport_technique.md
scripts/: demo_triage.py  inject_results.py  run_pipeline.sh
src/triage/: __init__.py  config.py  prompts.py
src/triage/data/: __init__.py  anonymize.py  build_dpo.py  build_sft.py  collect.py  schema.py  split.py  stats.py  triage_knowledge.py
src/triage/eval/: __init__.py  evaluate.py  safety.py
src/triage/serve/: __init__.py  api.py  audit.py  inference.py  questionnaire.py  triage_agent.py
src/triage/serve/static/: history.html  index.html
src/triage/train/: __init__.py  common.py  dpo.py  merge.py  sft.py
src/triage/utils/: __init__.py  common.py
tests/: test_anonymize.py  test_api.py  test_dpo_balance.py  test_label_normalization.py  test_questionnaire.py  test_regressions_audit_juillet10.py  test_safety_and_prompts.py  test_schema.py
