# ============================================================================
#  Configuration du projet — POC Agent de Triage Médical (CHSA)
# ============================================================================
#  Ce fichier est le "manifeste" du projet Python. Il est lu par UV (le
#  gestionnaire d'environnement et de paquets que nous utilisons) pour :
#    1. connaître le nom, la version et la description du projet ;
#    2. installer automatiquement les bonnes dépendances ;
#    3. exposer nos scripts en ligne de commande (section [project.scripts]).
#
#  Pourquoi UV ? UV est un gestionnaire ultra-rapide (écrit en Rust) qui
#  remplace pip + virtualenv + pip-tools. Une seule commande `uv sync`
#  recrée à l'identique l'environnement sur n'importe quelle machine, ce qui
#  garantit la REPRODUCTIBILITÉ — une exigence forte en santé.
# ============================================================================

[project]
name = "chsa-triage"
version = "0.1.0"
description = "POC d'un agent IA de triage médical (SFT LoRA + DPO sur Qwen3-1.7B) pour le CHSA."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "IA Engineer (CHSA)" }]

# --- Dépendances "cœur" : toujours installées --------------------------------
# Elles couvrent la préparation des données, l'entraînement (SFT + DPO) et
# l'API de démonstration en backend "transformers" (test local sans vLLM).
dependencies = [
    # --- Cœur Machine Learning ---
    "torch>=2.4,<2.7",            # moteur de calcul tensoriel (GPU)
    "transformers>=4.51",         # modèles & tokenizers Hugging Face (Qwen3)
    "peft>=0.13",                 # LoRA / adaptateurs (fine-tuning économe)
    "trl>=0.12",                  # SFTTrainer & DPOTrainer (entraînement)
    "datasets>=3.0",             # chargement & manipulation des corpus
    "accelerate>=1.0",            # orchestration de l'entraînement GPU
    "sentencepiece>=0.2",         # tokenisation bas niveau
    "safetensors>=0.4",           # format de poids sûr et rapide

    # --- Préparation & anonymisation des données (RGPD) ---
    "presidio-analyzer>=2.2",     # détection d'informations personnelles (PII)
    "presidio-anonymizer>=2.2",   # masquage des PII détectées
    "spacy>=3.7",                 # modèle linguistique utilisé par Presidio
    "pandas>=2.0",                # manipulation tabulaire
    "scikit-learn>=1.3",          # splits stratifiés, métriques

    # --- API de démonstration ---
    "fastapi>=0.115",             # framework d'API web
    "uvicorn[standard]>=0.30",    # serveur ASGI pour FastAPI
    "pydantic>=2.7",              # validation des schémas d'entrée/sortie
    "pydantic-settings>=2.4",     # configuration via variables d'environnement
    "httpx>=0.27",                # client HTTP (appel du backend vLLM)

    # --- Utilitaires ---
    "huggingface-hub>=0.25",      # téléchargement/publication de modèles
    "python-dotenv>=1.0",         # chargement des fichiers .env
    "pyyaml>=6.0",                # lecture des configs YAML
    "tqdm>=4.66",                 # barres de progression
    "tensorboard>=2.16",          # visualisation des courbes d'entraînement
]

[project.optional-dependencies]
# --- Extra "quantization" : QLoRA 4 bits pour tenir dans 12 Go de VRAM -------
quant = [
    "bitsandbytes>=0.43",
]
# --- Extra "serve" : backend de production vLLM (lourd, installé en Docker) --
# On l'isole car vLLM impose des versions de torch strictes qui peuvent
# entrer en conflit avec la pile d'entraînement. En local on s'en passe.
serve = [
    "vllm>=0.6",
]

# --- Groupe de développement : outillage qualité (non livré en production) ---
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

# --- Points d'entrée en ligne de commande -----------------------------------
# Après `uv sync`, ces commandes deviennent disponibles, p.ex. `triage-build-sft`.
[project.scripts]
triage-collect      = "triage.data.collect:main"
triage-build-sft    = "triage.data.build_sft:main"
triage-build-dpo    = "triage.data.build_dpo:main"
triage-anonymize    = "triage.data.anonymize:main"
triage-split        = "triage.data.split:main"
triage-train-sft    = "triage.train.sft:main"
triage-train-dpo    = "triage.train.dpo:main"
triage-evaluate     = "triage.eval.evaluate:main"
triage-api          = "triage.serve.api:main"

# ============================================================================
#  Configuration du système de build (hatchling) : où trouver le code source
# ============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/triage"]

# ============================================================================
#  Configuration UV : d'où télécharger PyTorch (roues compilées pour CUDA 12.4)
# ============================================================================
[tool.uv]
# On force l'usage des roues CUDA pour profiter du GPU RTX 4070.
[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# ============================================================================
#  Configuration de l'outil de qualité de code Ruff (lint + format)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E/F : erreurs PyFlakes/pycodestyle, I : tri des imports, UP : modernisation.
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # la longueur de ligne est gérée par le formateur

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
